--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,13 @@ asyncio-mqtt>=0.16.0
 # Utilities
 python-dateutil>=2.8.2
 
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+hypothesis>=6.92.0
+
+# Data processing for backtesting
+pandas>=2.0.0
+pyarrow>=14.0.0  # For Parquet support
+
